unreferenced_files_lib/src/tests/singular_searching/snapshots/unreferenced_files_lib__tests__singular_searching__found.snap
---
source: unreferenced_files_lib/src/tests/singular_searching/mod.rs
assertion_line: 24
expression: sorted_search_for

---
[]
